--- a/SubmissionTwo/app/src/main/res/values/strings.xml
+++ b/SubmissionTwo/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">SubmissionOne</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="username">Username</string>
     <string name="name">Name</string>
     <string name="github">Github</string>
@@ -15,9 +14,11 @@
     <string name="users">Users</string>
     <string name="menu_1">Menu 1</string>
     <string name="menu_2">Menu 2</string>
-    <string name="bottom_menu_1">Bottom Menu 1</string>
-    <string name="bottom_menu_2">Bottom Menu 2</string>
     <string name="no_user_found">No User Found</string>
     <string name="title_followers">Followers</string>
     <string name="title_following">Following</string>
+    <string name="icon_company_content_desc">Icon Company</string>
+    <string name="icon_origin_content_desc">Icon Origin</string>
+    <string name="icon_username_content_desc">Icon Origin</string>
+    <string name="user_photo_content_desc">User Photo</string>
 </resources>
