--- a/SubmissionTwo/app/src/main/res/values/strings.xml
+++ b/SubmissionTwo/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SubmissionOne</string>
+    <string name="app_name">MyGithubUser</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="username">Username</string>
     <string name="name">Name</string>
